adding more services of the app